--- a/foundation-frontiers/posts/2025/12/03/scienceindatascience.qmd
+++ b/foundation-frontiers/posts/2025/12/03/scienceindatascience.qmd
@@ -7,37 +7,11 @@ date: 12/04/2025
 toc: true
 image: images/thumbnail(2).png
 
-format:
-  html:
-    theme: [lux, rwds.scss]
-    css: rwds.css
-    toc: true
-    grid:
-      sidebar-width: 0px
-      body-width: 1000px
-      margin-width: 250px
-    code-annotations: below
-    mermaid:
-      theme: neutral
-
-bibliography: references.bib
-csl: chicago.csl
-
-execute:
-  eval: false
-  echo: true
-  messages: false
-  error: false
-  warning: false
-
-nocite: '@*'
-page-layout: article
-title-block-banner: true
 ---
 
 Have you ever run an elegant ML model that landed flat with those who were supposed to use the insights? Do you find yourself deep into building hundreds of features for your model without knowing exactly what they all mean? Do you spend the bulk of your time tweaking your algorithms while aiming for incremental improvements in accuracy? If so, you might be focused more on the "data" aspects of "data science" than the "science" aspects.
 
-### Two Foundational Elements of Data Science
+## Two Foundational Elements of Data Science
 
 "Data Science" contains two essential components, "data" and "science". The field of Data Science requires holding both components in equilibrium. Data is the raw material molded in the service of Science. While Data is first, Science is no lessimportant. Data is the foundation and Science gives it purpose.
 
@@ -59,13 +33,13 @@ The scientific method should be the scaffold supporting what data scientists do.
 
 In an influential, relevant paper Shmueli (2010) described two major types of statistical modeling, I) explanatory models which attempt to determine causal effects. And II) predictive models which seek accurate predictions. While predictive models can lead to understanding and possible explanatory models, explanatory models tend to be preferred by those seeking more scientific explanations for phenomena.
 
-### Data Modeling Culture Versus Algorithmic Culture
+## Data Modeling Culture Versus Algorithmic Culture
 
 Leo Breiman [in a famous paper](https://projecteuclid.org/journals/statistical-science/volume-16/issue-3/Statistical-Modeling--The-Two-Cultures-with-comments-and-a/10.1214/ss/1009213726.full) described two paradigms: I) the data modelling approach, which assumes the model that generates the data versus and II) the algorithm approach, which relies on flexible methods without assuming an underlying data generating model and assumptions about how the data are generated.Breiman(2001a) felt that the statistics discipline was missing out on opportunities by focusing more on data modeling approaches and not using algorithmic approaches. He practiced what he preached, developing new algorithmic approaches and encouraging the field to increase its focus on algorithms. For example, he introduced Random Forests, starting a cascade of more algorithmic approaches to modeling (Breiman, 2001b).
 
 This wise counsel fromBreimanencouraged those working with data to build more expertise in algorithms, promoting the algorithmic culture as a way to harness the power of new computational techniques. We would equateBreiman'salgorithmic approach with a greater focus on the data side of data science and the data modeling approach with a greater focus on the science side of data science.
 
-### Balancing Data and Science
+## Balancing Data and Science
 
 Just as pendulums slowly swing back and forth, so too has the pendulum swung too hard towards predictive accuracy (the data side) at the expense of contextual interpretation (the science side) . This pendulum swing is evidenced by the growing demand for explainable ML methods (seeAlangariret al. 2023 as an example) . One such method is the use of Shapley values to elicit and rank the most important features in a ML model (seeRozemberczkiet al 2022 for an introduction). It seems ironic that in the rush to gain model accuracy with sophisticated models containing hundreds of features, that end users of the models still want something they can understand and explain. In other words, they still want scientific knowledge and understanding of cause and effect even for complicated problems.
 
@@ -87,7 +61,7 @@ Here's one example loosely based on our work experience. A business executive ha
 
 With the availability of many algorithms and approaches that are able to process large amounts of data, it can be tempting to gravitate towards them. When teaching analysis/ applied statistics courses it is important to look beyond the methods and consider the overall aim.THereare a set of frameworks that have been around for a while that can be helpful in finding the right balance. One example is PPDAC (Mckayet al. 2000) thatemphasisesall the steps beyond the modelling part and the importance of considering them all. Using such frameworks can help decide whether a black box approach is suitable in the situation or whether this won't achieve the overall intended aim.
 
-### Finding Balance
+## Finding Balance
 
 So how do we ensure a good balance between data and science in data science?
 
@@ -99,7 +73,7 @@ A third way is continuing emphasis on the reproducibility of the results. Clean 
 
 A final way to find the balance is to better understand how the data are generated. Hoerl (2025) touched on this issue in calling for statisticians to focus more on data quality. We believe this advice to be equally relevant for data scientists. By recognizing the crucial importance of the data generation process, data scientists will better be able to use the right data that matches the problem of interest and push for changes as needed to ensure high quality data.
 
-### Conclusions
+## Conclusions
 
 We encourage data scientists to live up to their name and become experts in both Data and Science. As they find a proper balance between those two areas, their impact and influence will increase and the quality of their rigorous work will stand up to scrutiny and advance human knowledge.
 
