--- a/foundation-frontiers/posts/2025/12/03/scienceindatascience.qmd
+++ b/foundation-frontiers/posts/2025/12/03/scienceindatascience.qmd
@@ -73,6 +73,8 @@ A third way is continuing emphasis on the reproducibility of the results. Clean 
 
 A final way to find the balance is to better understand how the data are generated. Hoerl (2025) touched on this issue in calling for statisticians to focus more on data quality. We believe this advice to be equally relevant for data scientists. By recognizing the crucial importance of the data generation process, data scientists will better be able to use the right data that matches the problem of interest and push for changes as needed to ensure high quality data.
 
+![](images/balance.png){width=80% fig-align="center"}
+
 ## Conclusions
 
 We encourage data scientists to live up to their name and become experts in both Data and Science. As they find a proper balance between those two areas, their impact and influence will increase and the quality of their rigorous work will stand up to scrutiny and advance human knowledge.
