--- a/foundation-frontiers/posts/2025/12/03/scienceindatascience.qmd
+++ b/foundation-frontiers/posts/2025/12/03/scienceindatascience.qmd
@@ -5,7 +5,7 @@ description: |
 author: Willis Jensen, Fatemeh Torabi, Monnie McGee, Isabel Sassoon
 date: 12/04/2025
 toc: true
-image: images/thumbnail(2).png
+image: images/thumbnail2.png
 
 ---
 
