--- a/applied-insights/tutorials/posts/2025/12/12/MAS-guide.qmd
+++ b/applied-insights/tutorials/posts/2025/12/12/MAS-guide.qmd
@@ -110,9 +110,5 @@ About the author:
 :::
 ::: {.g-col-12 .g-col-md-6}
 Copyright and licence
-: &copy; 2025 Peter Capsalis 
-
-:::
-::: {.g-col-12 .g-col-md-6}
-: Capsalis, Peter. "​Testing Multi-Agent Systems in the LLM Age: A Practical Guide for Data Scientists", Real World Data Science, December 12, 2025. [URL](https://realworlddatascience.net/foundation-frontiers/posts/2025/11/27/scienceindatascience.html)
+: &copy; 2025 Capsalis, Peter. "​Testing Multi-Agent Systems in the LLM Age: A Practical Guide for Data Scientists", Real World Data Science, December 12, 2025. [URL](https://realworlddatascience.net/foundation-frontiers/posts/2025/11/27/scienceindatascience.html)
 :::
