--- a/applied-insights/case-studies/posts/2025/12/17/deploying_llms_nonprofits.qmd
+++ b/applied-insights/case-studies/posts/2025/12/17/deploying_llms_nonprofits.qmd
@@ -10,7 +10,7 @@ image: images/LLMthumb.png
 ---
 
 
-*Based on [our conversation](https://realworlddatascience.net/foundation-frontiers/posts/2025/11/27/MHF-interview.html) with [Mike Hudson](https://www.mikehudsonfoundation.org/), Founder of [MHF](https://www.mikehudsonfoundation.org), [Knowbot](https://www.knowbot.uk/) and [TestRAMP.](https://www.testramp.org/)
+*Based on [our conversation](https://realworlddatascience.net/foundation-frontiers/posts/2025/11/27/MHF-interview.html) with [Mike Hudson](https://www.mikehudsonfoundation.org/), Founder of [MHF](https://www.mikehudsonfoundation.org), [Knowbot](https://www.knowbot.uk/) and [TestRAMP.](https://www.testramp.org/)*
 
 Large language models (LLMs) are a form of generative artificial intelligence (AI) that offer transformative opportunities for organisations with complex information ecosystems. But deploying them responsibly requires technical pragmatism, cultural awareness, and a respect for context.
 
@@ -86,7 +86,7 @@ Hudson emphasised that many capabilities now considered standard (e.g. long cont
 
 Knowbot's LLM processing costs MHF money, and soKnowbot's team evaluates success not just by the number of questions answered but by the *relevance* of those questions to valuable decision-making. A tool that helps a policymaker or researcher retrieve something critical can have outsized impact.
 
-**Practitioner takeaway:**When measuring impact, develop metrics that capture qualitative value, not just quantitative usage. For example you might consider:
+**Practitioner takeaway:** When measuring impact, develop metrics that capture qualitative value, not just quantitative usage. For example you might consider:
 
 * Complexity of queries
 
