--- a/index.qmd
+++ b/index.qmd
@@ -126,11 +126,11 @@ toc: false
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## December Newsletter
-Although listening in to the Ashes in Australia reminds you the sun does still exist, dark, cold and wet seems to be the norm for the festive season in London! Time to find a warm spot by the fire with some good reading materials on all things Data Science and AI… 
+## January Newsletter
+Happy new year! Hope you all had a fantastic holiday period and indulged to the best/worst of your abilities. 2026 is here - time to prepare for the year ahead with some good reading materials on all things Data Science and AI…
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](https://substackcdn.com/image/fetch/$s_!IKyM!,f_auto,q_auto:good,fl_progressive:steep/https%3A%2F%2Fsubstack-post-media.s3.amazonaws.com%2Fpublic%2Fimages%2Ff67b5d95-34a4-4ebf-b705-b0337b832157_1310x738.png)
+![](https://substackcdn.com/image/fetch/$s_!BGWl!,w_1456,c_limit,f_webp,q_auto:good,fl_progressive:steep/https%3A%2F%2Fsubstack-post-media.s3.amazonaws.com%2Fpublic%2Fimages%2Fca23c697-f539-45db-beec-b6ce582d5ecf_1666x880.png)
 :::
 :::
 
