--- a/applied-insights/tutorials/posts/2026/12/why-95-percent-of-ai-projects-fail.qmd
+++ b/applied-insights/tutorials/posts/2026/12/why-95-percent-of-ai-projects-fail.qmd
@@ -1,5 +1,5 @@
 ---
-title: **Why 95% Of AI Projects Fail and How to Change the Odds**
+title: Why 95% Of AI Projects Fail and How to Change the Odds
 description: |
   Drawing on two decades of work building AI systems for medicine discovery, Lee Clewley argues that the success of AI models rests on three principles.
 categories:
